<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_corner_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingTop="@dimen/_4sdp"
            android:text="@string/title_no_resource_found"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:src="@drawable/ic_play_grey" />

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:src="@drawable/ic_right" />

            <ImageView
                android:layout_width="@dimen/_42sdp"
                android:layout_height="@dimen/_42sdp"
                android:src="@drawable/ic_play_color_accent" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:paddingLeft="@dimen/_12sdp"
            android:text="@string/discription_no_resource_found"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/actionOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/_12sdp"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingRight="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/action_ok"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</RelativeLayout>