<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_12sdp"
                    android:paddingRight="@dimen/_12sdp"
                    android:text="@string/discription_tv_cast"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/photoLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_74sdp"
                        android:background="@drawable/bg_image"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/title_photos"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_18sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/stream_photos"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="@dimen/_34sdp"
                            android:layout_height="@dimen/_34sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:src="@drawable/ic_images"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/advertize_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_74sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:focusable="false"
                        android:visibility="gone"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/_8sdp">

                        <FrameLayout
                            android:id="@+id/fram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:visibility="visible" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:id="@+id/videooLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_74sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@drawable/bg_video"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/title_videos"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_18sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/stream_videos"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="@dimen/_34sdp"
                            android:layout_height="@dimen/_34sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:src="@drawable/ic_videos"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/audioLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_74sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@drawable/bg_audio"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/title_audios"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_18sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/stream_audios"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="@dimen/_34sdp"
                            android:layout_height="@dimen/_34sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:src="@drawable/ic_audio"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/browserLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_74sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@drawable/bg_web"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/title_browser"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_18sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/stream_browser"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="@dimen/_34sdp"
                            android:layout_height="@dimen/_34sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:src="@drawable/ic_web"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/screenMirroringLayout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_74sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:background="@drawable/bg_screen_mirroring"
                        android:orientation="horizontal"
                        android:padding="@dimen/_16sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="@dimen/_4sdp"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/title_screen_mirroring"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_18sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:text="@string/discription_of_screen_mirroring"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp" />
                        </LinearLayout>

                        <ImageView
                            android:layout_width="@dimen/_34sdp"
                            android:layout_height="@dimen/_34sdp"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:src="@drawable/ic_screen_mirroring"
                            app:tint="@color/white" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>