<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CustomTextView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_corner_white">

        <ImageView
            android:id="@+id/btn_later"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_8sdp"
            android:padding="@dimen/_12sdp"
            app:tint="@color/black"
            android:src="@drawable/ic_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingTop="@dimen/_12sdp"
            android:paddingRight="@dimen/_12sdp"
            android:paddingBottom="@dimen/_16sdp">

            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90sdp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/bg_rate_us"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:text="@string/title_give_five_star"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/rate_us_discription_1"
                android:textColor="#646262"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/rate_us_discription_2"
                android:textColor="#646262"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

            <com.screen.mirroring.casttotv.tv.cast.screencast.rating.ScaleRatingBar
                android:id="@+id/rotationratingbar_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_18sdp"
                app:srb_starHeight="@dimen/_48sdp"
                app:srb_starPadding="@dimen/_2sdp"
                app:srb_starWidth="@dimen/_42sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_not_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_round_corner_grey"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/title_cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/btn_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_corner_color_primary"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="Rate Now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

